tests/snapshots/run_wpt_conformance__trtx_lesser_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser.https.any.js",
    "lesser int32 4D tensors",
    "trtx",
    Failed {
        msg: Some(
            "lesser :: lesser int32 4D tensors: index 1: actual=0 expected=1 tolerance=0\n  inputs: inputA: [10, -20, 30, -40, 50, -60, 70, -80, 90, -100, 110, -120]; inputB: [5, -10, 35, -35, 55, -55, 65, -85, 95, -95, 105, -125]\n  expected output: [0, 1, 1, 1, 1, 1, 0, 0, 1, 1 ...] (len=12)\n  actual output: [0, 0, 0, 0, 0, 0, 128, 63, 0, 0 ...] (len=12)\n  expected output full nd:\n[0, 1, 1, 1, 1, 1, 0, 0, 1, 1, ...] (len=12, shape=[1, 2, 2, 3])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 128, 63, 0, 0, ...] (len=12, shape=[1, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: i32[1, 2, 2, 3];\n    inputB: i32[1, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = lesser(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
